expected/main/gens/primNZBitNonZero-neg-32.err
ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 3
external nonZero0  {primNZBitNonZero  0} :: Bit  0 -> Maybe (NZBit  0)
         ^
No generated implementation: Argument value 0 is too low; must be at least 2

ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 4
external nonZero1  {primNZBitNonZero  1} :: Bit  1 -> Maybe (NZBit  1)
         ^
No generated implementation: Argument value 1 is too low; must be at least 2

ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 5
external nonZero33 {primNZBitNonZero 33} :: Bit 33 -> Maybe (NZBit 33)
         ^
No generated implementation: Bit vector of width 33 does not fit in a single word

ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 6
external nonZero48 {primNZBitNonZero 48} :: Bit 48 -> Maybe (NZBit 48)
         ^
No generated implementation: Bit vector of width 48 does not fit in a single word

ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 7
external nonZero65 {primNZBitNonZero 65} :: Bit 65 -> Maybe (NZBit 65)
         ^
No generated implementation: Bit vector of width 65 does not fit in a single word

ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 8
external nonZero1K {primNZBitNonZero 1K} :: Bit 1K -> Maybe (NZBit 1K)
         ^
No generated implementation: Argument value 1024 is too large; must be less than 1000

ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 11
external forget33 {primNZBitForget 33} :: NZBit 33 -> Bit 33
         ^
No generated implementation: Bit vector of width 33 does not fit in a single word

ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 12
external forget48 {primNZBitForget 48} :: NZBit 48 -> Bit 48
         ^
No generated implementation: Bit vector of width 48 does not fit in a single word

ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 13
external forget64 {primNZBitForget 64} :: NZBit 64 -> Bit 64
         ^
No generated implementation: Bit vector of width 64 does not fit in a single word

ERROR: "actual/main/gens/primNZBitNonZero-neg-32.lc", line 14
external forget96 {primNZBitForget 96} :: NZBit 96 -> Bit 96
         ^
No generated implementation: Bit vector of width 96 does not fit in a single word

ERROR: Aborting after 10 previously reported errors

